<resources>
    <string name="app_name">Quiz_Part3</string>
    <string name="question1">Ada Lovelace was the world\'s first computer programmer </string>
    <string name="question2">Albert Einstein discovered the nucleus atom</string>
    <string name="question3">Isaac Newton developed a total of two laws to explain the orbits of planets</string>
    <string name="question4">Charles Darwin was credited for the theory of natural selection </string>
    <string name="question5">Thomas Edison discovered electricity</string>
    <string name="correct"> Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="sample_question">Sample Question?</string>
    <string name="false_text">FALSE</string>
    <string name="refill">Refill, please</string>
    <string name="true_text">TRUE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cheat">Cheat!</string>
    <string name="idc">I don\'t care!</string>
    <string name="confirm_cheat">Are you sure you want to cheat?</string>
    <string name="show_answer">Show Answer!</string>
    <string name="you_won">You Won!</string>
    <string name="description_one">There have been many developing branches of science that range from computer science, physics, astronomy, to biology. As technology evolves the different branches of science advance to offer new explanations.</string>
    <string name="description_two">In this quiz app, the branches of science involved are computer science, chemistry, astronomy, biology, and physics. The scientists that are mentioned in these questions are Ada Lovelace, Albert Einstein, Isaac Newton, Charles Darwin, and Thomas Edison</string>
</resources>