<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id= "@+id/main_fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E15221"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/quiz_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/sample_question"
        android:textSize = "20sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/true_answer_button"/>

    <Button
        android:id="@+id/true_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/true_text"
        android:layout_marginEnd="24dp"
        app:layout_constraintBaseline_toBaselineOf="@id/false_answer_button"
        app:layout_constraintTop_toBottomOf="@id/quiz_question_textView"
        app:layout_constraintBottom_toBottomOf="@id/false_answer_button"
        app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline"/>

    <Button
        android:id="@+id/false_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/false_text"
        android:layout_marginStart="24dp"
        app:layout_constraintBaseline_toBaselineOf="@id/true_answer_button"
        app:layout_constraintTop_toBottomOf="@id/quiz_question_textView"
        app:layout_constraintStart_toStartOf="@id/vertical_center_guideline"
        />

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/false_answer_button"
        app:layout_constraintBottom_toTopOf="@id/next_question_button"
        />

    <Button
        android:id="@+id/next_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/refill"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />


</androidx.constraintlayout.widget.ConstraintLayout>